--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "glob": "^11.0.0",
     "prettier": "3.3.3",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-minify": "^2.0.0"
   }
 }
